@@ -20,6 +20,7 @@ import com.squareup.javawriter.JavaWriter;
 
 import java.io.BufferedWriter;
 import java.io.IOException;
+import java.lang.String;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -155,22 +156,42 @@ public class RealmProxyClassGenerator {
 
         writer.emitPackage(REALM_PACKAGE_NAME)
                 .emitEmptyLine();
-        writer.emitImports(
-                "android.util.JsonReader",
-                "android.util.JsonToken",
-                "io.realm.RealmObject",
-                "io.realm.internal.ColumnType",
-                "io.realm.internal.Table",
-                "io.realm.internal.ImplicitTransaction",
-                "io.realm.internal.LinkView",
-                "io.realm.internal.android.JsonUtils",
-                "java.io.IOException",
-                "java.util.*",
-                "org.json.JSONObject",
-                "org.json.JSONException",
-                "org.json.JSONArray",
-                packageName + ".*")
-                .emitEmptyLine();
+
+        ArrayList<String> imports = new ArrayList<String>();
+        imports.add("android.util.JsonReader");
+        imports.add("android.util.JsonToken");
+        imports.add("io.realm.RealmObject");
+        imports.add("io.realm.internal.ColumnType");
+        imports.add("io.realm.internal.Table");
+        imports.add("io.realm.internal.ImplicitTransaction");
+        imports.add("io.realm.internal.LinkView");
+        imports.add("io.realm.internal.android.JsonUtils");
+        imports.add("java.io.IOException");
+        imports.add("java.util.*");
+        imports.add("org.json.JSONObject");
+        imports.add("org.json.JSONException");
+        imports.add("org.json.JSONArray");
+        imports.add(String.format("%s.%s", packageName, className));
+
+        for (VariableElement field : fields) {
+            String fieldTypeName = "";
+            if (typeUtils.isAssignable(field.asType(), realmObject))  { // Links
+                fieldTypeName = field.asType().toString();
+                if (!imports.contains(fieldTypeName)) {
+                    imports.add(fieldTypeName);
+                }
+            } else if (typeUtils.isAssignable(field.asType(), realmList)) { // LinkLists
+                String fullType = field.asType().toString();
+                int index = fullType.indexOf('<');
+                int jndex = fullType.indexOf('>');
+                fieldTypeName = fullType.substring(index + 1, jndex);
+                if (!imports.contains(fieldTypeName)) {
+                    imports.add(fieldTypeName);
+                }
+            }
+        }
+        writer.emitImports(imports);
+        writer.emitEmptyLine();
 
         // Begin the class definition
         writer.beginType(
