@@ -4,6 +4,7 @@
  * Adding more logging capabilities at the JNI level.
  * Added proper encryption support. NOTE: The key has been increased from 32 bytes to 64 bytes (see example).
  * Throw NoSuchMethodError when RealmResults.indexOf() is called, since it's not implemented yet.
+ * Adding more precise imports in proxy classes to avoid ambiguous references.
 
 0.76.0
  * RealmObjects can now be imported using JSON.
